--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -575,6 +575,7 @@ a.create-best-project:hover {
 .members__competition-title{
     font-weight: 800;
     font-size: 27pt;
+    word-wrap: break-word;
 }
 
 .main-text form {
@@ -925,7 +926,7 @@ a.btn-remove {
 }
 .concurs-edit{
     float: right;
-    margin: 22px 0 0 15px;
+    margin: 22px 18px 0 15px;
 }
 
 .concurs-priz-header, .concurs-org-header, .concurs-sponsor-header, .concurs-usl-header, .concurs-video-header{
@@ -1142,6 +1143,7 @@ a.btn-remove {
     color:black;
     font-weight: bold;
     margin-bottom: 60px;
+    word-wrap: break-word;
 }
 .winner-p2{
     font-size: 24px;
@@ -1202,6 +1204,8 @@ a.btn-remove {
     background: #32b0d9;
     color: #fff;
 }
-#block-1{
-    position: relative;
+
+#block-0{
+    overflow: hidden;
+    margin-bottom: 15px;
 }
