--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -936,7 +936,10 @@ a.btn-remove {
 }
 .concurs-edit{
     float: right;
-    margin: 22px 18px 0 15px;
+    margin-top: 5px;
+}
+.concurs-edit a:hover{
+    background: #c1c1c1!important;
 }
 
 .concurs-priz-header, .concurs-org-header, .concurs-sponsor-header, .concurs-usl-header, .concurs-video-header{
@@ -1107,21 +1110,7 @@ a.btn-remove {
     top:26px;
     left:302px;
 }
-.concurs-countu-romb{
-    position: absolute;
-    height: 8px;
-    width: 8px;
-    background: white;
-    border-bottom: 1px solid #eeeeee;
-    border-left: 1px solid #eeeeee;
-    -o-transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-    z-index: 999;
-    top:97px;
-    right:60px;
-}
+
 .concurs-winner a:hover{
     text-decoration: none;
     background: #00ab31;
@@ -1142,16 +1131,6 @@ a.btn-remove {
 }
 .concurs-button:hover{
     background: #74bd00;
-}
-.concurs-count-user{
-    position: absolute;
-    width: 50px;
-    height: 38px;
-    border:1px solid #eeeeee;
-    text-align: center;
-    padding-top: 9px;
-    right:15px;
-    top:83px;
 }
 .winner-cup{
     height: 220px;
@@ -1206,13 +1185,6 @@ a.btn-remove {
 #block-2{
     margin-top: 20px;
 }
-.uchastie{
-    text-align: center;
-    padding: 20px 0;
-    position: absolute;
-    top:62px;
-    right:100px;
-}
 .uchastie button{
     font-size: 13px!important;
     background: #76cb00;
@@ -1230,7 +1202,38 @@ a.btn-remove {
 #block-0{
     overflow: hidden;
 }
-
+.uchastie{
+    float: right;
+    margin-top: 10px;
+}
+.concurs-count{
+    float: right;
+    position: relative;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+.concurs-countu-romb{
+    position: absolute;
+    top:14px;
+    left:-4px;
+    height: 8px;
+    width: 8px;
+    background: white;
+    border-bottom: 1px solid #eeeeee;
+    border-left: 1px solid #eeeeee;
+    -o-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: 999;
+}
+.concurs-count-user{
+    width: 50px;
+    height: 38px;
+    border:1px solid #eeeeee;
+    text-align: center;
+    padding-top: 9px;
+}
 #block-1{
     position: relative;
 }
