--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -947,6 +947,7 @@ a.btn-remove {
     color:black!important;
     padding-top: 0px;
     font-weight: bold;
+    margin-bottom: 13px;
 }
 .concurs-org-header{
     margin-bottom: 13px;
@@ -971,9 +972,14 @@ a.btn-remove {
 }
 .concurs-org-url,.concurs-sponsor-url{
     color: #9bda44;
-    text-decoration: underline;
+    text-decoration: none;
     font-size: 16px;
     font-weight: 100;
+}
+.concurs-org-url:hover,.concurs-sponsor-url:hover{
+    text-decoration: underline;
+    color: #9bda44;
+    cursor: pointer;
 }
 .concurs-org-name{
     height: 35px;
@@ -1185,9 +1191,12 @@ a.btn-remove {
 #block-2{
     margin-top: 20px;
 }
-.uchastie button{
-    font-size: 13px!important;
+.uchastie-ok{
+    font-size: 14px!important;
     background: #76cb00;
+}
+.uchastie .modal-content{
+    text-align: center;
 }
 .video-final{
     text-align: center;
@@ -1198,6 +1207,11 @@ a.btn-remove {
     background: #32b0d9;
     color: #fff;
 }
+.btn-addvideo:hover{
+    background: #3191ba!important;
+    color: #fff;
+}
+
 
 #block-0{
     overflow: hidden;
@@ -1257,7 +1271,6 @@ a.btn-remove {
 
 /*******************index********************/
 .box-1, .box-2, .box-3, .box-4, .box-5{
-    overflow: hidden;
     width: auto;
 }
 .box-1{
@@ -1364,6 +1377,14 @@ a.create-best-project:hover{
     margin-top: 50px;
     line-height: 36px;
 }
+.tab-view .nav-tabs>li>a {
+    font-size: 14px;
+    color: black!important;
+    margin-right: 2px;
+    line-height: 1.42857143;
+    border: 1px solid transparent;
+    border-radius: 4px 4px 0 0;
+}
 .top-concurs .nav-tabs>li.active>a, .top-concurs .nav-tabs>li.active>a:focus, .top-concurs .nav-tabs>li.active>a:hover{
     color: white;
     font-weight: bold;
@@ -1418,13 +1439,17 @@ a.create-best-project:hover{
 .index-concurs{
     float: left;
     padding: 10px;
+    word-wrap: break-word;
+}
+.index-concurs a:hover{
+    text-decoration: none;
 }
 .top-concurs .tab-content{
     margin-top: 40px;
 }
 .index-concurs .img{
     width: 100%;
-    height: 125px;
+    overflow: hidden;
     background: #27a6d0;
     position: relative;
 }
@@ -1451,4 +1476,22 @@ a.create-best-project:hover{
     margin-left: -5px;
     color:white;
     font-size: 11px;
+}
+
+.breadcrumb {
+    padding: 15px;
+    margin-bottom: 0;
+    list-style: none;
+    border-radius: 4px;
+}
+.section-bread{
+    border-top: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+    width: auto;
+    margin-bottom: 30px;
+}
+/*********************выпадающее меню*******************************/
+.menu-popup{
+    width: auto;
+    border: 1px solid red;
 }
