--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -1579,40 +1579,54 @@ a.create-best-project:hover{
         width: 970px;
     }
 }
-.competition-list .nav{
-   background: #f7f7f7;
-}
-.competition-list .nav li{
-    margin: 20px;
-}
-.competition-list .nav a{
-    text-transform: uppercase;
-    font-size: 16px;
-    color: black;
-    font-weight: bold;
-    border: none!important;
-    background: none!important;
-    padding: 0!important;
-    display: initial!important;
-}
 .competition-list .nav-tabs{
-    border-bottom: none!important;
+    padding:15px 0;
+    background: #f7f7f7;
+    border-bottom: none;
 }
-
-.competition-list .active, .competition-list .nav a:hover, .competition-list .nav a:active,.competition-list .nav a:visited, .competition-list .nav a:focus{
-    border:none!important;
-}
-.competition-list .nav a:hover, .competition-list .nav a:active, .competition-list .nav a:focus{
-    border:none!important;
+.competition-list .nav-tabs>li.active>a, .competition-list .nav-tabs>li.active>a:focus, .competition-list .nav-tabs>li.active>a:hover{
     color:#33b0d9!important;
-    border-bottom: 1px solid #33b0d9!important;
+    font-weight:bold!important;
+    font-size:16px!important;
+    background: none!important;
+    text-transform: uppercase!important;
+    opacity: 1!important;
+    letter-spacing: 1px!important;
+    border-bottom: 1px solid #7adefe!important;
+    display: inline!important;
+    padding: 0 0px 3px 0px!important;
+    margin-left: 20px;
+}
+.competition-list .nav>li>a, .competition-list .nav>li>a {
+    color: #000000;
+    font-weight: bold;
+    font-size: 16px;
+    background: none;
+    border: none!important;
+    text-transform: uppercase;
+    opacity: 0.8;
+    letter-spacing: 1px;
+    padding: 0 !important;
+    margin-left: 20px;
+}
+.competition-list .nav-tabs>li>a {
+    margin-right: 2px;
+    line-height: 1.42857143;
+    border: 1px solid transparent;
+    border-radius: 4px 4px 0 0;
+}
+.competition-list .nav>li>a {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
 }
 .competition-list .tab-content{
-    padding: 15px 0 15px 15px!important;
+    padding: 15px 0 15px 0!important;
     border: none!important;
 }
 .competition-tr{
     overflow: hidden;
+    padding-left: 15px;
 }
 .competition-tr div{
     float: left;
